// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`field-slider Renders \`field-slider\` with custom props 1`] = `
<widget-settings-item-stub
  title="Custom title"
>
  <div
    class="v-input v-input--slider v-input--slider--ticks v-input--slider--thumb-label v-input--is-label-active v-input--is-dirty theme--light"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-slider"
        >
          <input
            aria-readonly="false"
            aria-valuemax="25"
            aria-valuemin="20"
            aria-valuenow="22"
            readonly="readonly"
            role="slider"
            value="22"
          />
          <div
            class="v-slider__track__container"
          >
            <div
              class="v-slider__track"
              style="left: 0px; width: 100%;"
            />
            <div
              class="v-slider__track-fill primary"
              style="left: 0px; width: 40%;"
            />
          </div>
          <div
            class="v-slider__ticks-container"
          >
            <span
              class="v-slider__ticks v-slider__ticks--always-show"
              style="border-width: 1px; left: 0%;"
            />
            <span
              class="v-slider__ticks v-slider__ticks--always-show"
              style="border-width: 1px; left: 20%;"
            />
            <span
              class="v-slider__ticks v-slider__ticks--always-show"
              style="border-width: 1px; left: 40%;"
            />
            <span
              class="v-slider__ticks v-slider__ticks--always-show"
              style="border-width: 1px; left: 60%;"
            />
            <span
              class="v-slider__ticks v-slider__ticks--always-show"
              style="border-width: 1px; left: 80%;"
            />
            <span
              class="v-slider__ticks v-slider__ticks--always-show"
              style="border-width: 1px; left: 100%;"
            />
          </div>
          <div
            class="v-slider__thumb-container v-slider__thumb-container--show-label primary--text"
            style="left: 40%;"
          >
            <div
              class="v-slider__thumb primary"
            />
            <transition-stub
              name="scale-transition"
            >
              <div
                class="v-slider__thumb-label__container"
                style="display: none;"
              >
                <div
                  class="v-slider__thumb-label primary"
                  style="height: 32px; width: 32px;"
                >
                  <span>
                    22
                  </span>
                </div>
              </div>
            </transition-stub>
          </div>
        </div>
      </div>
      <div
        class="v-messages theme--light"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</widget-settings-item-stub>
`;

exports[`field-slider Renders \`field-slider\` with default props 1`] = `
<widget-settings-item-stub
  title="Custom required title"
>
  <div
    class="v-input v-input--slider v-input--slider--ticks v-input--slider--thumb-label v-input--is-label-active v-input--is-dirty theme--light"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-slider"
        >
          <input
            aria-readonly="false"
            aria-valuemax="5"
            aria-valuemin="0"
            aria-valuenow="3"
            readonly="readonly"
            role="slider"
            value="3"
          />
          <div
            class="v-slider__track__container"
          >
            <div
              class="v-slider__track"
              style="left: 0px; width: 100%;"
            />
            <div
              class="v-slider__track-fill primary"
              style="left: 0px; width: 60%;"
            />
          </div>
          <div
            class="v-slider__ticks-container"
          >
            <span
              class="v-slider__ticks v-slider__ticks--always-show"
              style="border-width: 1px; left: 0%;"
            />
            <span
              class="v-slider__ticks v-slider__ticks--always-show"
              style="border-width: 1px; left: 20%;"
            />
            <span
              class="v-slider__ticks v-slider__ticks--always-show"
              style="border-width: 1px; left: 40%;"
            />
            <span
              class="v-slider__ticks v-slider__ticks--always-show"
              style="border-width: 1px; left: 60%;"
            />
            <span
              class="v-slider__ticks v-slider__ticks--always-show"
              style="border-width: 1px; left: 80%;"
            />
            <span
              class="v-slider__ticks v-slider__ticks--always-show"
              style="border-width: 1px; left: 100%;"
            />
          </div>
          <div
            class="v-slider__thumb-container v-slider__thumb-container--show-label primary--text"
            style="left: 60%;"
          >
            <div
              class="v-slider__thumb primary"
            />
            <transition-stub
              name="scale-transition"
            >
              <div
                class="v-slider__thumb-label__container"
                style="display: none;"
              >
                <div
                  class="v-slider__thumb-label primary"
                  style="height: 32px; width: 32px;"
                >
                  <span>
                    3
                  </span>
                </div>
              </div>
            </transition-stub>
          </div>
        </div>
      </div>
      <div
        class="v-messages theme--light"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</widget-settings-item-stub>
`;
